--- a/11-config/tsconfig.json
+++ b/11-config/tsconfig.json
@@ -3,28 +3,45 @@
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
     /* Basic Options */
+    /* ? incremental = 컴파일이 될때마다 새롭게 모든 파일을 다 컴파일하는게 아니라 이전 파일과 비교해서 수정된 내용만 컴파일하는옵션 */
     // "incremental": true,                         /* Enable incremental compilation */
+    /* ? target = 어떤 버전으로 컴파일 할 것인지 */
     "target": "es5" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', 'ES2021', or 'ESNEXT'. */,
+    /*  ? module = 모듈 정보를 어떻게 할 것인지 노드 프로젝트라면 commonjs를 브라우저 환경이라면 es */
     "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
+    /*  ? lib 세부적으로 어떤 라이브러리를 이용할것인지 선택적으로 사용 가능 */
     // "lib": [],                                   /* Specify library files to be included in the compilation. */
+    /*  ? allowJs 프로젝트안에서 js 파일을 같이 쓸건지 프로젝트 내에서 js와 ts를 섞어서 쓸것인지 */
     // "allowJs": true,                             /* Allow javascript files to be compiled. */
+    /*  ? checkJs true로 설정하면 js파일에서 무언가 잘못사용한다면 에러가 발생 */
     // "checkJs": true,                             /* Report errors in .js files. */
+    /*  ? jsx = react에서 사용하는 jsx */
     // "jsx": "preserve",                           /* Specify JSX code generation: 'preserve', 'react-native', 'react', 'react-jsx' or 'react-jsxdev'. */
+    /*  ? declaration = 타입 정의에 관련된 것, 내가 작성한 코드를 라이브러리 형식으로 다른 사람에게 제공할것이 아니라면 잘 사용하지 않는다. */
     // "declaration": true,                         /* Generates corresponding '.d.ts' file. */
     // "declarationMap": true,                      /* Generates a sourcemap for each corresponding '.d.ts' file. */
+    /*  ? sourceMap = 디버깅할때 유용하게 사용할 수 있다 */
     // "sourceMap": true,                           /* Generates corresponding '.map' file. */
+    /* ? outFile = 작성한 다수의 ts파일을 딱 하나의 js 파일로 바꿀때 사용*/
     // "outFile": "./",                             /* Concatenate and emit output to single file. */
     "outDir": "./build" /* Redirect output structure to the directory. */,
     "rootDir": "./src" /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
+    /* ? composite = incremental과 함께 쓰일 수 있다 이전에 빌드한 내용을 기억하고 있어서 다음에 빌드할때 더 빠르게 빌드할 수 있도록 도와줌  */
     // "composite": true,                           /* Enable project compilation */
+    /* ? tsBuildInfoFile = incremental가 true이면 관련된 정보들을 담을 수 있는 파일을 지정하는 것*/
     // "tsBuildInfoFile": "./",                     /* Specify file to store incremental compilation information */
+    /* ? removeComments = 코멘트를 다 삭제하는 것*/
     // "removeComments": true,                      /* Do not emit comments to output. */
+    /* ? noEmit = 컴파일 에러체크만하고 js코드로 변환하는 일은 하지않는다. 컴파일 에러가 있는지만 확인하고 싶을떄 true */
     // "noEmit": true,                              /* Do not emit outputs. */
+    /* ? importHelpersts = 코드를 아주 오래된 자바스크립트 코드 버전으로 변환할떄 문제가 될 수 있는데 조금더 안전하게 변환하게 도와주는 것, 그리고 그런 함수들을 가지고 올 수 있는것*/
     // "importHelpers": true,                       /* Import emit helpers from 'tslib'. */
     // "downlevelIteration": true,                  /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
+    /* ? isolatedModules = 각각의 파일을 다른 모듈로 변환해서 만드는 것 */
     // "isolatedModules": true,                     /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
 
     /* Strict Type-Checking Options */
+    /* ? strict = 기본 옵션 true 엄격한 확인을 받을 수 있도록 true를 유지하자 */
     "strict": true /* Enable all strict type-checking options. */,
     // "noImplicitAny": true,                       /* Raise error on expressions and declarations with an implied 'any' type. */
     // "strictNullChecks": true,                    /* Enable strict null checks. */
@@ -69,6 +86,6 @@
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  // 컴파일 제외시킬 파일 exclude,  include = 여기 들어가는 파일만 컴파일함
+  /* ? exclude = 컴파일 제외시킬 파일 exclude,  include = 여기 들어가는 파일만 컴파일함 */
   "exclude": ["./src/dev.ts"]
 }
